WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101343
[EFL] Fix execution of exif-orientation-image-document.html on EFL Wk2 bot
https://bugs.webkit.org/show_bug.cgi?id=101343
Summary
[EFL] Fix execution of exif-orientation-image-document.html on EFL Wk2 bot
Dominik Röttsches (drott)
Reported
2012-11-06 06:39:45 PST
Test fails because WebKit is in shouldRespectImageOrientation=0 mode, see
https://bugs.webkit.org/show_bug.cgi?id=100698#c17
Attachments
Patch
(3.33 KB, patch)
2012-11-07 00:29 PST
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominik Röttsches (drott)
Comment 1
2012-11-06 23:53:54 PST
Nico helpfully explained that we need to include Cairo in the ifdef in RenderObject::shouldRespectImageOrientation:
https://bugs.webkit.org/show_bug.cgi?id=100698#c18
Dominik Röttsches (drott)
Comment 2
2012-11-07 00:29:48 PST
Created
attachment 172728
[details]
Patch
Dominik Röttsches (drott)
Comment 3
2012-11-07 00:41:04 PST
Committed
r133728
: <
http://trac.webkit.org/changeset/133728
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug