[EFL] Fix execution of exif-orientation-image-document.html on EFL Wk2 bot https://bugs.webkit.org/show_bug.cgi?id=101343

Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Add Cairo to the list of backends that support shouldRespectImageOrientation.

No new tests, fixes exif-orientation-image-document.html.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::shouldRespectImageOrientation):

LayoutTests:

Unskipping exif-orientation-image-document.html now that respecting
orientation is default enabled for image documents.

* platform/efl-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/119530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133728 268f45cc-cd09-0410-ab3c-d52691b4dbfc