Source/WebCore/rendering/RenderObject.cpp
@@ -2227,7 +2227,7 @@ RespectImageOrientationEnum RenderObject::shouldRespectImageOrientation() const
     // Respect the image's orientation if it's being used as a full-page image or it's
     // an <img> and the setting to respect it everywhere is set.
     return
-#if USE(CG) || PLATFORM(CHROMIUM)
+#if USE(CG) || PLATFORM(CHROMIUM) || USE(CAIRO)
         // This can only be enabled for ports which honor the orientation flag in their drawing code.
         document()->isImageDocument() ||
 #endif
